k8s/astronaut-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astronaut-service
  namespace: astrogo
spec:
  selector:
    app: astronaut-service
  ports:
  - name: grpc
    port: 8081
    targetPort: 8081
  - name: http
    port: 8082
    targetPort: 8082
