k8s/astronaut-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astronaut-service-ingress
  namespace: astrogo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /astronauts
        pathType: Prefix
        backend:
          service:
            name: astronaut-service
            port:
              number: 8082
